GNOME Bugzilla – Bug 675535
GtkScale in GtkToolbar: strange behaviour with double click
Last modified: 2012-06-13 17:08:44 UTC
Created attachment 213529 [details] Test case Description: If you make a double click on the slider, you can still move it. But you can't set its position with a further mouse click. If you make a double click on the bar, the slider moves to the lower or upper limit and can not be moved anymore. This is only occurring if the toolbar style is set to "GTK_STYLE_CLASS_PRIMARY_TOOLBAR". A simple test case is attached. How to reproduce: Make a double click on the slider or on the bar. Expected behaviour: The same as with "GTK_STYLE_CLASS_TOOLBAR" Actual behaviour: -> Description This issue could be also related although it isn't reproduceable with a double click. http://redmine.audacious-media-player.org/issues/103
Could you backport the fix also to the 3.4 branch? The patch is attached. By the way, there is a typo in commit 4a25bac0e7685000fff90a211db6ac60f6b74ab1: http://git.gnome.org/browse/gtk+/commit/?id=4a25bac0e7685000fff90a211db6ac60f6b74ab1 "the the user hits" Thanks. Thomas Lange
Created attachment 216314 [details] [review] Patch for 3.4 branch